RESOLVED FIXED 255311
Web Inspector: Regression(260175@main) Grid overlay for grids using repeat syntax triggers assert performing downcast
https://bugs.webkit.org/show_bug.cgi?id=255311
Summary Web Inspector: Regression(260175@main) Grid overlay for grids using repeat sy...
Patrick Angle
Reported 2023-04-11 17:06:01 PDT
Attachments
Patrick Angle
Comment 1 2023-04-11 17:13:47 PDT
EWS
Comment 2 2023-04-12 08:28:49 PDT
Committed 262869@main (a465a8a38ab5): <https://commits.webkit.org/262869@main> Reviewed commits have been landed. Closing PR #12631 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.